--- a/Styles/index.css
+++ b/Styles/index.css
@@ -19,10 +19,113 @@ body {
   text-align: center;
   height: 100vh;
   overflow: hidden;
+  background: rgb(58, 53, 53);
+  color: rgb(245, 245, 245);
 }
 
 .content {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  opacity: 0;
+}
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: -300px;
+  height: 100vh;
+  width: 300px;
+  background: rgba(41, 37, 243, 0.7);
+  z-index: 4;
+  opacity: 0;
+}
+.sidebar .hamburger-menu {
+  position: absolute;
+  top: 15px;
+  left: 310px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.sidebar .hamburger-menu span {
+  height: 7px;
+  width: 55px;
+  background: rgb(245, 245, 245);
+  margin: 3px;
+  border-radius: 10px;
+}
+.sidebar ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 100px;
+  height: 50vh;
+}
+.sidebar ul li {
+  font-size: 1.1rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  cursor: pointer;
+  font-family: "poppins", sans-serif;
+  position: relative;
+}
+.sidebar ul li::after {
+  content: " ";
+  position: absolute;
+  left: 5%;
+  bottom: -5px;
+  background: rgb(245, 245, 245);
+  height: 2px;
+  width: 90%;
+  opacity: 0;
+}
+.sidebar ul li:hover {
+  transform: scale(110%);
+}
+.sidebar ul li:hover::after {
+  opacity: 1;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 70px;
+  width: 100%;
+  z-index: 3;
+  background: black;
+}
+.navbar ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: inherit;
+  margin: 0 auto;
+}
+.navbar ul li {
+  font-size: 1.1rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  cursor: pointer;
+  font-family: "poppins", sans-serif;
+}
+.navbar ul li::after {
+  content: " ";
+  position: absolute;
+  left: 5%;
+  bottom: -5px;
+  background: rgb(245, 245, 245);
+  height: 2px;
+  width: 90%;
+  opacity: 0;
+}
+.navbar ul li:hover {
+  transform: scale(110%);
+}
+.navbar ul li:hover::after {
+  opacity: 1;
 }/*# sourceMappingURL=index.css.map */
