--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -1,4 +1,4 @@
-@import "_settings";
+@import "settings";
 @import "./Layout/content";
 @import "./Components/sidebar";
 @import "./Components/navbar";
