--- a/Styles/Components/_navbar.scss
+++ b/Styles/Components/_navbar.scss
@@ -7,17 +7,18 @@
   z-index: 3;
   background: black;
 
-  // @media screen 1050px 
-  
   ul{
     @include justify(space-evenly);
     height: inherit;
-    margin: 0 auto;
+
+    @media screen and (max-width: 1200px ) {
+      opacity: 0;
+    }
 
     li{
       font-size: 1.1rem;
       text-transform: capitalize;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
       cursor: pointer;
       font-family: $font2;
 
