--- a/Styles/index.css
+++ b/Styles/index.css
@@ -10,7 +10,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
   font-family: "roboto", sans-serif;
 }
@@ -24,11 +25,76 @@ body {
 }
 
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100vh;
-  opacity: 0;
+}
+.content .converter {
+  background: rgb(180, 180, 180);
+  color: black;
+  height: 250px;
+  width: 450px;
+  border: solid black 2px;
+  border-radius: 40px;
+  padding: 25px 50px;
+  display: grid;
+  gap: 5px;
+}
+.content .converter h2 {
+  font: bold 1.7rem "poppins", sans-serif;
+}
+.content .converter input {
+  border: 2px solid rgb(41, 37, 243);
+  background: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 1rem;
+  text-transform: capitalize;
+  width: 70%;
+}
+.content .converter .submit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.content .converter .submit span {
+  background: rgb(41, 37, 243);
+  height: 30px;
+  width: 45px;
+  border: 1px solid black;
+  border-radius: 7px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.content .converter .submit button {
+  background: rgb(41, 37, 243);
+  color: white;
+  border: black 1px solid;
+  border-radius: 10px;
+  padding: 5px 15px;
+  cursor: pointer;
+  font-size: 1.2rem;
 }
 
 .sidebar {
@@ -41,27 +107,46 @@ body {
   z-index: 4;
   opacity: 0;
 }
+@media screen and (max-width: 1200px) {
+  .sidebar {
+    opacity: 1;
+  }
+}
 .sidebar .hamburger-menu {
   position: absolute;
-  top: 15px;
-  left: 310px;
+  top: 10px;
+  left: 315px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   cursor: pointer;
+  -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
 .sidebar .hamburger-menu span {
-  height: 7px;
+  height: 6px;
   width: 55px;
   background: rgb(245, 245, 245);
-  margin: 3px;
+  margin: 5px;
   border-radius: 10px;
 }
 .sidebar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-top: 100px;
   height: 50vh;
 }
@@ -84,7 +169,9 @@ body {
   opacity: 0;
 }
 .sidebar ul li:hover {
-  transform: scale(110%);
+  -webkit-transform: scale(110%);
+      -ms-transform: scale(110%);
+          transform: scale(110%);
 }
 .sidebar ul li:hover::after {
   opacity: 1;
@@ -100,16 +187,26 @@ body {
   background: black;
 }
 .navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: inherit;
-  margin: 0 auto;
+}
+@media screen and (max-width: 1200px) {
+  .navbar ul {
+    opacity: 0;
+  }
 }
 .navbar ul li {
   font-size: 1.1rem;
   text-transform: capitalize;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   cursor: pointer;
   font-family: "poppins", sans-serif;
 }
@@ -124,7 +221,9 @@ body {
   opacity: 0;
 }
 .navbar ul li:hover {
-  transform: scale(110%);
+  -webkit-transform: scale(110%);
+      -ms-transform: scale(110%);
+          transform: scale(110%);
 }
 .navbar ul li:hover::after {
   opacity: 1;
