--- a/Styles/Components/_sidebar.scss
+++ b/Styles/Components/_sidebar.scss
@@ -34,10 +34,10 @@
     @include justify(space-around);
     flex-direction: column;
     margin-top: 100px;
-    height: 50vh;
+    height: 40vh;
+    padding: 5px;
 
     li{
-      font-size: 1.1rem;
       text-transform: capitalize;
       letter-spacing: 1px;
       cursor: pointer;
