--- a/Styles/index.css
+++ b/Styles/index.css
@@ -6,6 +6,26 @@
   font-family: "poppins";
   src: url(../Assets/fonts/Poppins/Poppins-Regular.ttf);
 }
+@-webkit-keyframes entrance {
+  0% {
+    -webkit-transform: translate(500px);
+            transform: translate(500px);
+  }
+  100% {
+    -webkit-transform: translate(0px);
+            transform: translate(0px);
+  }
+}
+@keyframes entrance {
+  0% {
+    -webkit-transform: translate(500px);
+            transform: translate(500px);
+  }
+  100% {
+    -webkit-transform: translate(0px);
+            transform: translate(0px);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -22,6 +42,13 @@ body {
   overflow: hidden;
   background: rgb(58, 53, 53);
   color: rgb(245, 245, 245);
+}
+
+.active {
+  display: grid !important;
+  opacity: 1 !important;
+  -webkit-animation: entrance ease-in-out 1s forwards;
+          animation: entrance ease-in-out 1s forwards;
 }
 
 .content {
@@ -45,12 +72,14 @@ body {
   width: 450px;
   border-radius: 40px;
   padding: 25px 50px;
-  display: grid;
+  display: none;
   gap: 10px;
   -webkit-transform: translateX(500px);
       -ms-transform: translateX(500px);
           transform: translateX(500px);
   opacity: 0;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 .content .converter h2 {
   font: bold 1.7rem "poppins", sans-serif;
