--- a/Styles/Layout/_content.scss
+++ b/Styles/Layout/_content.scss
@@ -76,5 +76,11 @@
         }
       }
     }
+    p{
+      margin-top: 5px;
+      font-size: 1.1rem;
+      color: red;
+      text-transform: capitalize;
+    }
   }
 }
