--- a/Styles/Layout/_content.scss
+++ b/Styles/Layout/_content.scss
@@ -3,7 +3,8 @@
   height: 100vh;
 
   .converter{
-    background: $color2;
+    background: rgb(96,96,96);
+    background: linear-gradient(270deg, rgba(96,96,96,1) 0%, rgb(111, 110, 110) 40%);
     color: white;
     box-shadow: 1px 1px 10px 2px rgba(245, 245, 245, 0.50);
     height: 300px;
@@ -21,7 +22,7 @@
     }
 
     input{
-      border: 2px solid $color3;
+      border: 2px inset $color3;
       color: white;
       background: none;
       border-radius: 10px;
@@ -33,7 +34,7 @@
       transition: 0.2s ease;
 
       &:focus{
-        border: 2px solid $color5;
+        border: 2px outset $color3;
       }
     }
 
@@ -41,7 +42,8 @@
       @include justify(space-evenly);
 
       span{
-        background: $color3;
+        background: rgb(41,37,243);
+        background: linear-gradient(90deg, rgba(41,37,243,1) 0%, rgba(80,77,255,1) 50%, rgba(77,173,255,1) 100%);
         height: 43px;
         width: 70px;
         border-radius: 7px;
@@ -54,12 +56,14 @@
           transform: scale(110%);
         }
         &:active{
-          background: $color5;
+          background: rgb(41,37,243);
+          background: linear-gradient(270deg, rgba(41,37,243,1) 0%, rgba(80,77,255,1) 50%, rgba(77,173,255,1) 100%);
         }
       }
 
       button{
-        background: $color3;
+        background: rgb(41,37,243);
+        background: linear-gradient(90deg, rgba(41,37,243,1) 0%, rgba(80,77,255,1) 50%, rgba(77,173,255,1) 100%);
         color: white;
         border-radius: 10px;
         padding: 9px 25px;
@@ -72,7 +76,8 @@
           transform: scale(110%);
         }
         &:active{
-          background: $color5;
+          background: rgb(41,37,243);
+          background: linear-gradient(270deg, rgba(41,37,243,1) 0%, rgba(80,77,255,1) 50%, rgba(77,173,255,1) 100%);
         }
       }
     }
