--- a/Styles/Layout/_content.scss
+++ b/Styles/Layout/_content.scss
@@ -36,6 +36,9 @@
       &:focus{
         border: 2px outset $color3;
       }
+      &::placeholder{
+        color: whitesmoke;
+      }
     }
 
     .submit{
